# aenea

server/: core.py
server/linux_wayland/: evdevImpl.py
server/linux_x11/: integration_test.py  test-client.py  test_server_x11.py  x11_libxdo.py  x11_xdotool.py
server/linux_x11/plugins/: example.py
server/linux_x11/plugins/recognition_results/: __init__.py  recognitionbar_tk.py
server/osx/: pyproject.toml  server_osx.py  test-client.py  test_client.py
