[tool.poetry]
name = "aenea-server-osx"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "LGPL"

[tool.poetry.dependencies]
python = "^3.7"
pyobjc = "^7.3"
py-applescript = "^1.0.2"
jsonrpclib = "^0.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
